Fixed Hero image and About section. Wrapped containers for responsive display.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,12 +6,12 @@ body {
 .content {
     display: flex;
     flex-direction: column;
-    background-image: url(../images/lionsmane.jpg);
+    /* background-image: url(../images/lionsmane.jpg); */
 }
 
 
 .header, .footer {
-    padding: 1% /*5%*/;
+    padding: 1% 3%;
     background-color: #06752e;
     min-height: 10vh;
 }
@@ -25,11 +25,14 @@ body {
 .header h1 {
     text-shadow: 2px 2px 5px rgba(240, 248, 255, 0.25) !important;
     font-size: 3em;
-    margin: 0 auto;
+    text-align: center;
+}
+
+.logo, .nav {
+    flex: 1;
 }
 
 .logo {
-    flex: 1;
     display: flex;
     justify-content: center;
 }
@@ -39,17 +42,18 @@ body {
 }
 
 .nav {
-    flex: 1;
-    align-self: center;
     display: flex;
     justify-content: center;
 }
 
 .nav ul {
     display: flex;
-    list-style: none;
-    gap: 12px;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-left: auto;
+    gap: 1em;
+    list-style: none;
+    padding: 0;
 }
 
 .nav a {
@@ -58,35 +62,41 @@ body {
 }
 
 .section {
-    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: stretch;
 }
 
 .hero,.carousel,.info,.about,.contact/*,.footer*/ {
     flex: auto;
-    /*min-height: 20vh;*/
+    padding: 5%;
+    min-height: 20vh;
 }
 
 .hero {
     display: flex;
     justify-content: center;
-    padding: 3%;
+    /* padding: 3%; */
     background-color: #fff
 }
 
 .hero-content {
-    max-width: 75vw;
     display: flex;
+    flex-wrap: wrap-reverse;
     justify-content: center;
-    align-items: stretch;
-    padding: 3%;
+    align-items: center;
+    padding: 5%;
     gap: 1%;
     background-color: #c0dcca;
     border-radius: 20px;
+    max-width: 75vw; /* Update to 100vw in media query */
+    min-width: 350px; /* May move to media query */
 }
 
 .hero-txt {
-    flex: 1;
-    /*max-width: 50%;*/
+    flex: 2;
+    min-width: 350px; /* May move to media query */
 }
 
 .hero p {
@@ -97,12 +107,13 @@ body {
 }
 
 .hero-img {
-    flex: auto;
+    flex:  0 0 auto;
     background-image: url(../images/lionsmane.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 100%;
-    /*min-width: 25%;*/
+    width: 300px;
+    height: 300px;
 }
 
 button {
@@ -116,8 +127,9 @@ button {
 .info {
     display: flex;
     justify-content: space-around;
-    /*gap: 36px;*/
-    padding: 10% 5%;
+    flex-wrap: wrap;
+    gap: 36px;
+    /* padding: 10% 5%; */
     background-color: #fff;
 }
 
@@ -188,13 +200,23 @@ button {
     justify-content: space-between;
 }
 
+.about h2, 
+.grow:hover h2, 
+.cook:hover h2, 
+.feed:hover h2 {
+    color: #06752e;
+    text-shadow: 2px 2px 5px #c0dcca;
+
+}
+
 .funguys {
     flex: 1;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 10%;
     padding: 3%;
-
+    
 }
 
 .thecult, .thecook {
@@ -203,23 +225,23 @@ button {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    min-width: 350px; /* May move to media query */
+    max-width: 40%;
 }
 
 .photo {
     height: 300px;
     width: 190px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .thecult .photo {
     background-image: url("../images/chrisdoggett.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
 }
 
 .thecook .photo {
     background-image: url("../images/mattbunting.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
 }
 
 .blurb p {
